--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="/assets/css/styles.css">
 		{% elsif page.type == 'blog' %}
 		<link rel="stylesheet" href="/assets/css/blog-styles.css">
-		{% elsif page.type == 'post' %}
+		{% elsif page.type == 'Post' %}
 		<link rel="stylesheet" href="/assets/css/post-styles.css">
 		{% elsif page.type == 'links' %}
 		<link rel="stylesheet" href="/assets/css/links-styles.css">
