--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -3,6 +3,7 @@
 
     &-title {
       font-size: 48px;
+      line-height: 64px;
       margin: 0 0 8px;
       background-image: linear-gradient( 135deg, darken($color-blue, 30%) 0%, $color-blue 50% );
       background-size: 100%;
@@ -12,6 +13,11 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       -webkit-box-decoration-break: clone;
+
+      @media (max-width: 850px) {
+        font-size: 32px;
+        line-height: 40px;
+      }
     }
 
     &-desc {
@@ -46,20 +52,7 @@
 }
 
 .blog-post {
-  // width: calc(33.3% - 24px);
   margin-bottom: 24px;
-
-  // @media (min-width: 1250px) {
-  //   width: calc(25% - 24px);
-  // }
-
-  // @media (max-width: 850px) {
-  //   width: calc(50% - 12px);
-  // }
-
-  // @media (max-width: 420px) {
-  //   width: 100%;
-  // }
 
   &__title {
     margin-top: 12px;
