--- a/_sass/links.scss
+++ b/_sass/links.scss
@@ -1,13 +1,17 @@
 $color-button: darken($color-blue, 20%);
 $color-orange: #f67729;
 
-.body-links {
-  background: linear-gradient(to bottom, #0072ff, #00c6ff);
-}
 .links {
+  background: linear-gradient(to bottom, #0072ff, #00c6ff);
+  min-height: 100vh;
+}
+
+.links-container {
   width: 100%;
-  margin: 50px auto;
+  margin: 50px auto;  
   text-align: center;
+  padding-left: 60px;
+  padding-right: 60px;
 
   &__thumb {
     width: 105px;
@@ -17,6 +21,7 @@ $color-orange: #f67729;
     display: block;
     margin: 0 auto 20px;
   }
+
   &__title {
     color: #fff;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
