--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -10,6 +10,19 @@
   flex-direction: column;
   z-index: -1;
 
+  &:after {
+    content: '\2193';
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%);
+    color: #fff;
+    font-size: 32px;
+    z-index: 3;
+    opacity: .75;
+    animation: movedown 1s ease infinite alternate;
+  }
+
   &__title {
     color: #fff;
     margin: 60px auto 0;
@@ -18,6 +31,12 @@
     font-size: 48px;
     line-height: 60px;
     padding: 0 12px;
+    text-align: center;
+
+    @media (max-width: 600px) {
+      font-size: 32px;
+      line-height: 40px;
+    }
   }
 
   &__image {
@@ -28,13 +47,14 @@
     position: fixed;
     opacity: 0.4;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 60px);
     top: 0;
     left: 0;
     z-index: 1;
     will-change: transform;
+    margin-top: 60px;
 
-    &:after {
+    &:before {
       content: "";
       background-image: linear-gradient( 180deg, rgba(0, 0, 0, 0.8) 0, transparent 50%, transparent 90%, rgba(0, 0, 0, 0.8) );
       position: absolute;
@@ -51,6 +71,12 @@
 .post-content {
   background-color: #fff;;
   padding-bottom: 24px;
+
+  .post-detail {
+    padding: 20px;
+    background-color: lighten($color-gray, 55%);
+    box-shadow: 5px 5px 0 0 lighten($color-gray, 35%);
+  }
 
   &__more {
     display: block;
@@ -72,7 +98,10 @@
   p {
     font-size: 16px;
     line-height: 24px;
-    margin: 20px 0;
+
+    &:not(.post-detail p) {
+      margin: 20px 0;
+    }
   }
 
   h2,
@@ -95,9 +124,11 @@
 
   .image-full  {
     img {
-      margin-left: calc(-1 * (70vw - 760px) / 2);
-      max-width: initial;
-      width: 70vw;
+      @media(min-width: 760px) {
+        margin-left: calc(-1 * (70vw - 760px) / 2);
+        max-width: initial;
+        width: 70vw;
+      }
     }
 
     figcaption {
